--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
     <h1>Calculator</h1>
     <div class="calulator-container">
         <div class="screen">
-            <div class="previous-operand">2 +</div>
+            <div class="previous-operand"></div>
             <div class="current"></div>
         </div>
         <button class="button">AC</button>
         <button class="button">DEL</button>
         <button class="button operator">%</button>
         <button class="button operator">/</button>
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button">3</button>
+        <button class="button number">1</button>
+        <button class="button number">2</button>
+        <button class="button number">3</button>
         <button class="button operator">*</button>
-        <button class="button">4</button>
-        <button class="button">5</button>
-        <button class="button">6</button>
+        <button class="button number">4</button>
+        <button class="button number">5</button>
+        <button class="button number">6</button>
         <button class="button operator">-</button>
-        <button class="button">7</button>
-        <button class="button">8</button>
-        <button class="button">9</button>
+        <button class="button number">7</button>
+        <button class="button number">8</button>
+        <button class="button number">9</button>
         <button class="button operator">+</button>
         <button class="button decimal">.</button>
-        <button class="button">0</button>
+        <button class="button number">0</button>
         <button class="button equal">=</button>
     </div>
 </body>
