--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="previous-operand"></div>
             <div class="current"></div>
         </div>
-        <button class="button">AC</button>
-        <button class="button">DEL</button>
+        <button class="button clear">AC</button>
+        <button class="button delete">DEL</button>
         <button class="button operator">%</button>
         <button class="button operator">/</button>
         <button class="button number">1</button>
