--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <div class="current"></div>
         </div>
         <button class="button clear">AC</button>
-        <button class="button delete">DEL</button>
-        <button class="button operator">%</button>
-        <button class="button operator">/</button>
-        <button class="button number">1</button>
-        <button class="button number">2</button>
-        <button class="button number">3</button>
-        <button class="button operator">*</button>
-        <button class="button number">4</button>
-        <button class="button number">5</button>
-        <button class="button number">6</button>
-        <button class="button operator">-</button>
-        <button class="button number">7</button>
-        <button class="button number">8</button>
-        <button class="button number">9</button>
-        <button class="button operator">+</button>
-        <button class="button decimal">.</button>
-        <button class="button number">0</button>
-        <button class="button equal">=</button>
+        <button data-key="Backspace" class="button delete">DEL</button>
+        <button data-key="%" class="button operator">%</button>
+        <button data-key="/" class="button operator">/</button>
+        <button data-key="1" class="button number">1</button>
+        <button data-key="2" class="button number">2</button>
+        <button data-key="3" class="button number">3</button>
+        <button data-key="*" class="button operator">*</button>
+        <button data-key="4" class="button number">4</button>
+        <button data-key="5" class="button number">5</button>
+        <button data-key="6" class="button number">6</button>
+        <button data-key="-" class="button operator">-</button>
+        <button data-key="7" class="button number">7</button>
+        <button data-key="8" class="button number">8</button>
+        <button data-key="9" class="button number">9</button>
+        <button data-key="+" class="button operator">+</button>
+        <button data-key="." class="button decimal">.</button>
+        <button data-key="0" class="button number">0</button>
+        <button data-key="=" class="button equal">=</button>
     </div>
 </body>
 </html>
